--- a/main.scss
+++ b/main.scss
@@ -16,7 +16,6 @@ $orangered-light: #ff7c4d;
 }
 
 body {
-  display: block;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -31,6 +30,7 @@ header {
   left: 0;
   height: 3.5rem;
   background-color: rgba(0,0,0,0.8);
+  box-shadow: 0px 3px 10px rgba($gray-dark,0.5);
   z-index: 1000;
 
   .nav-container {
@@ -132,6 +132,11 @@ main {
   background-color: $white;
   top: 0;
   left: 0;
+
+  hr {
+    border-color: $gray-light;
+    width: 75%;
+  }
 
   .main-header{
     background-color: $primary-green;
@@ -260,7 +265,58 @@ main {
   }
 
   .main-reviews {
-    border: 3px solid $orangered;
+    padding: 3rem 0;
+    margin-bottom: 5%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+      font-weight:100;
+      font-size: 2rem;
+      color: $primary-green-dark;
+    }
+
+    p{
+      background-color: $gray-light;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      padding: 1rem;
+      width: 50%;
+      position: relative;
+      z-index: 5;
+
+      &::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 15rem;
+        color: rgba($gray,0.5);
+        font-family: sans-serif;
+        z-index: -1;
+      }
+    }
   }
+
+    .main-last {
+      padding: 5rem;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      color: white;
+      background-color: $primary-green;
+
+      .media-icons a {
+        fill: $white;
+
+        .linkedin-logo:hover {
+          fill: navy;
+        }
+
+        .github-logo:hover {
+          fill: black;
+        }
+      }
+    }
 }
