--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   box-sizing: border-box; }
 
 body {
-  display: block;
   font-family: 'Open Sans', sans-serif; }
 
 header {
@@ -15,6 +14,7 @@ header {
   left: 0;
   height: 3.5rem;
   background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.5);
   z-index: 1000; }
   header .nav-container {
     width: 90%;
@@ -83,6 +83,9 @@ main {
   background-color: white;
   top: 0;
   left: 0; }
+  main hr {
+    border-color: #f1f1f1;
+    width: 75%; }
   main .main-header {
     background-color: #00b2a9;
     color: white;
@@ -180,5 +183,42 @@ main {
             transform: translateY(-5px);
             border-radius: 3px; }
   main .main-reviews {
-    border: 3px solid orangered;
-    display: flex; }
+    padding: 3rem 0;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    main .main-reviews h2 {
+      font-weight: 100;
+      font-size: 2rem;
+      color: #009991; }
+    main .main-reviews p {
+      background-color: #f1f1f1;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      padding: 1rem;
+      width: 50%;
+      position: relative;
+      z-index: 5; }
+      main .main-reviews p::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 15rem;
+        color: rgba(164, 164, 164, 0.5);
+        font-family: sans-serif;
+        z-index: -1; }
+  main .main-last {
+    padding: 5rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    background-color: #00b2a9; }
+    main .main-last .media-icons a {
+      fill: white; }
+      main .main-last .media-icons a .linkedin-logo:hover {
+        fill: navy; }
+      main .main-last .media-icons a .github-logo:hover {
+        fill: black; }
