Add basic styling for footer and reposition it

--- a/main.scss
+++ b/main.scss
@@ -354,8 +354,18 @@ main {
         width: 90% !important;
         margin: 1rem;
       }
+    }
   }
-  }
+}
 
-
+footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  padding: 10px 0;
+  margin: 0;
+  left: 0;
+  background-color: orangered;
+  width: 100%;
+  z-index: 2;
 }
