--- a/main.scss
+++ b/main.scss
@@ -13,11 +13,13 @@ $tablet: 768px;
 
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  position: relative;
 }
 
 header {
@@ -130,10 +132,7 @@ header {
 }
 
 main {
-  position: absolute;
   background-color: $white;
-  top: 0;
-  left: 0;
 
   hr {
     border-color: $gray-light;
@@ -160,7 +159,7 @@ main {
       z-index: 2;
 
       &-hero-header {
-        font-size: 6rem;
+        font-size: 5rem;
         line-height: 1;
         margin: 15px 0;
         padding-top: 4rem;
@@ -330,7 +329,7 @@ main {
     }
 }
 
-@media only screen and (max-width: 815px) {
+@media screen and (max-width: 815px) {
   header {
     display: flex;
 
@@ -341,6 +340,14 @@ main {
 
   main {
     display: block;
+
+    .main-header {
+      &__content {
+        &-hero-header {
+          font-size: 3rem;
+        }
+      }
+    }
   }
 
   .main-about__content{
