--- a/main.scss
+++ b/main.scss
@@ -280,10 +280,10 @@ main {
 
     p{
       background-color: $gray-light;
-      margin: 2rem 0 3rem 0;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      padding: 1rem 5rem;
-      width: 65%;
+      padding: 20px 50px;
+      margin: 0 25px;
+      max-width: 700px;
       position: relative;
       z-index: 5;
 
@@ -298,6 +298,11 @@ main {
         font-family: sans-serif;
         z-index: -1;
       }
+    }
+
+    span {
+      margin-top: 10px;
+      padding: 0 20px;
     }
   }
 
