--- a/main.scss
+++ b/main.scss
@@ -149,7 +149,7 @@ main {
     padding-right: 9em;
     padding-top: 4em;
     padding-bottom: 4em;
-
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -314,6 +314,7 @@ main {
       color: white;
       line-height: 3rem;
       background-color: $primary-green;
+      text-align: center;
 
       .media-icons  {
         padding-top: 2rem;
@@ -353,21 +354,22 @@ main {
         }
       }
     }
-  }
-
-  .main-about__content{
 
 
-    &-list {
-      flex-direction: column;
-      align-items: center!important;
+    .main-about__content{
 
-      &-item {
-        width: 90% !important;
-        margin: 1rem;
+
+      &-list {
+        flex-direction: column;
+
+        &-item {
+          width: 90%;
+          margin: 1rem;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        }
       }
     }
-  }
+}
 }
 
 footer {
@@ -384,4 +386,5 @@ footer {
 
 .section-title {
   padding: 0 25px;
+  text-align: center;
 }
